VZDEV/src/objects/CCPM_storesNotConsidered__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the Custom settings to store market, Territory and Distric to which SMS should not be sent.</description>
    <fields>
        <fullName>CCPM_district__c</fullName>
        <description>This field stores the value of the district.</description>
        <inlineHelpText>This field stores the value of the district.</inlineHelpText>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_market__c</fullName>
        <description>This field stores the market value.</description>
        <inlineHelpText>This field stores the market value.</inlineHelpText>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_territory__c</fullName>
        <description>Holds the value for territory.</description>
        <inlineHelpText>Holds the value for territory.</inlineHelpText>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stores Not Considered</label>
</CustomObject>